--- a/resources/angular-views/directive-partials/ui-taggable-input.html
+++ b/resources/angular-views/directive-partials/ui-taggable-input.html
@@ -4,6 +4,7 @@
         ng-model="data"
         class="form-control text-left"
         config="config"
-        options="options">
+        options="options"
+        placeholder="Start typing to add tags">
     </selectize>
 </div>
