--- a/resources/angular-views/import/index.html
+++ b/resources/angular-views/import/index.html
@@ -1,18 +1,22 @@
 
-<div class="page import-page">
+<!-- Import page -->
+<div ng-show="global.state.profile.selected.id > 0" class="page import-page">
     <ui-page-title data-title="'Import'" data-icon="'cloud-upload'"></ui-page-title>
     <div class="clearfix"></div>
+
+    Import movement data for
+    <b>{{ global.state.profile.selected.first_name + ' ' + global.state.profile.selected.last_name }}</b>
 
     <div class="movement-import row">
 
         <!-- Import new movement -->
         <div ng-show="isUploading === false" class="col-md-3 col-md-offset-3 text-center">
             <button
-                ngf-select="import($file)"
-                ngf-drop="import($file)"
-                accept="text/*"
-                ngf-pattern="'text/*'"
+                ngf-select="import($files)"
+                ngf-drop="import($files)"
+                accept="text/plain,text/csv"
                 ngf-max-size="2MB"
+                multiple
                 class="btn btn-primary btn-circle btn-lg">
 
                 <i class="fa fa-plus"></i>
@@ -21,11 +25,7 @@
 
         <!-- Uploading movement file -->
         <div ng-show="isUploading === true" class="col-md-3 col-md-offset-3 text-center">
-            <i class="fa fa-spinner fa-spin fa-3x text-primary"></i>
-
-            <br>
-            <br>
-            <span style="color: #ccc">(In Development)</span>
+            <i class="fa fa-spinner fa-spin fa-2x text-primary"></i>
         </div>
     </div>
 
@@ -98,4 +98,11 @@
             <button type="button" class="btn btn-primary">Done</button>
         </div>
     </div>
+</div>
+
+<!-- No profile selected -->
+<div
+    ng-show="global.state.profile.selected.id === 0"
+    ng-include="'partials/no-profile-selected-notice.html'"
+    class="page">
 </div>
