--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -151,15 +151,4 @@
 </div>
 
 <!-- No profile selected -->
-<div ng-show="profile.id === 0" class="page">
-    <h1 class="text-center">No profile selected</h1>
-    <br>
-
-    <div class="text-center">
-        Please select a profile to view its details.
-        <br>
-
-        You can also take this opportunity to
-        <a ng-click="Rover.browseTo.path('profile/create')" href="javascript:;">create one</a>.
-    </div>
-</div>
+<div ng-show="profile.id === 0" ng-include="'partials/no-profile-selected-notice.html'" class="page"></div>
