Bug fix for profiles dropdown + updates to web layout

--- a/resources/angular-views/import/index.html
+++ b/resources/angular-views/import/index.html
@@ -53,7 +53,7 @@
             <!-- Movement preview -->
             <div class="row">
                 <div class="col-xs-12">
-                    <ui-movement-placeholder data-aspect-ratio="4:3"></ui-movement-placeholder>
+                    <ui-movement-preview data-aspect-ratio="4:3"></ui-movement-preview>
                 </div>
             </div>
 
