--- a/resources/angular-views/directive-partials/ui-editable-fields/fields.html
+++ b/resources/angular-views/directive-partials/ui-editable-fields/fields.html
@@ -1,5 +1,7 @@
 
-<div class="panel panel-default ui-editable-list-container">
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
+<div class="panel panel-default ui-editable-fields">
     <div class="panel-heading">
         {{ heading }}
 
@@ -9,7 +11,7 @@
                 Save &nbsp; <i class="fa fa-toggle-on"></i>
             </span>
             <span ng-click="edit()" ng-show="state == 'idle'">
-                Edit &nbsp; <i class="fa fa-toggle-off"></i>
+                Edit All Fields &nbsp; <i class="fa fa-toggle-off"></i>
             </span>
             <span ng-show="state == 'saving'" style="color: #ccc;">
                 <i class="fa fa-toggle-off"></i>
