--- a/resources/angular-views/directive-partials/ui-editable-fields/field-value-timestamp.html
+++ b/resources/angular-views/directive-partials/ui-editable-fields/field-value-timestamp.html
@@ -1,7 +1,7 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div ng-show="state != 'editing'" class="row no-gutter">
+<div ng-show="state != 'editing'" class="row no-gutter ui-editable-field-value">
 
     <!-- Edit icon -->
     <div class="col-sm-1 text-center">
