Removed unused services

--- a/resources/angular-views/submit-movement-demo.html
+++ b/resources/angular-views/submit-movement-demo.html
@@ -48,7 +48,8 @@
     </div>
 
     <!-- Select a movement -->
-    <div class="row" ng-hide="sports.selected == sports.default">
+    <!-- <div class="row" ng-hide="sports.selected == sports.default"> -->
+    <div class="row">
         <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -68,7 +69,8 @@
     </div>
 
     <!-- Submit data -->
-    <div class="row" ng-hide="movements.selected == movements.default">
+    <!-- <div class="row" ng-hide="movements.selected == movements.default"> -->
+    <div class="row">
         <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
