--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -19,10 +19,10 @@
                     data-toggle="modal"
                     data-target="#deleteProfileConfirmation"
                     data-toggle="tooltip"
-                    title="Delete <b>{{ profile.first_name }}</b>'s profile"
+                    title="Delete <b>{{ profile.firstName }}</b>'s profile"
                     class="btn btn-danger">
 
-                    Delete <b>{{ profile.first_name }}</b>'s profile
+                    Delete <b>{{ profile.firstName }}</b>'s profile
                 </button>
 
                 <!-- Delete confirmation -->
@@ -31,8 +31,8 @@
                         <div class="modal-content">
                             <div class="modal-body">
                                 <p>
-                                    Are you sure you want to delete <b>{{ profile.first_name }}
-                                    {{ profile.last_name }}</b>'s profile?
+                                    Are you sure you want to delete <b>{{ profile.firstName }}
+                                    {{ profile.lastName }}</b>'s profile?
                                 </p>
                             </div>
                             <div class="modal-footer text-center">
@@ -40,7 +40,7 @@
                                     Cancel
                                 </button>
                                 <button ng-click="deleteProfile()" type="button" class="btn btn-primary" data-dismiss="modal">
-                                    Yes, delete {{ profile.first_name }}
+                                    Yes, delete {{ profile.firstName }}
                                 </button>
                             </div>
                         </div>
@@ -78,19 +78,19 @@
                     data-model="global.state.profile.list[global.store.profileId]"
                     data-save="saveProfileDetails"
                     data-save-callback="saveProfileDetailsCallback"
-                    data-heading="{{ global.state.profile.list[global.store.profileId].first_name }}'s details">
+                    data-heading="{{ global.state.profile.list[global.store.profileId].firstName }}'s details">
 
                     <!-- First name -->
                     <ui-editable-field
                         data-label="First Name"
-                        data-key="first_name"
+                        data-key="firstName"
                         data-required="true">
                     </ui-editable-field>
 
                     <!-- Last name -->
                     <ui-editable-field
                         data-label="Last Name"
-                        data-key="last_name">
+                        data-key="lastName">
                     </ui-editable-field>
 
                     <!-- Height -->
@@ -222,7 +222,7 @@
 
                         <div class="panel-body">
                             FMS Forms: {{ fmsForms }} <br><br>
-                            Profile alias: {{ profile.first_name }} ({{ profile.id }}) <br>
+                            Profile alias: {{ profile.firstName }} ({{ profile.id }}) <br>
                             Profile global: ({{ global.state.profile.list[global.store.profileId].id }}) <br>
                         </div>
                     </div>
